    and use that for compiling the JS library
    Changed: configure.in, libjs/jsprf.c, libjs/jsprf.h, libjs/Makefile.am
    Closes: SF bug #788040
  * fixed parent proxy authentication, added Digest authentication
    (both client and server authentication)
    Added: wc/proxy/auth/parse.py
    Changed: wc/proxy/auth/{digest,basic,__init__}.py,
      wc/proxy/ClientServerMatchmaker.py

2.0
  * require and use python 2.3
    Changed: a lot config and build files
  * remove -std=gnu99 option from compiler call, fixes compilation on
    platforms which do not have GNU gcc 3.x.
    Changed: setup.py
    Closes: SF bug #757361
  * do not setuid/setgid any more to enable web configuration
    Changed: wc/__init__.py
  * updated simpleTAL to 3.4
    Changed: wc/webgui/simpletal/*.py
  * - fix blocking filter
    - burn gif and switch to blocked.png
    Changed: wc/filter/Blocker.py, wc/webgui/__init__.py
    Added: templates/classic/blocked.png
  * - CAN-???: detect and prevent IE <input type> crash
    - CAN-???: detect and prevent Mozilla <fieldset style> crash
    - CAN-2003-0469: detect and prevent IE <hr align> crash
    - CAN-2003-0344: detect and prevent <object type> crash
    Changed: wc/filter/HtmlParser.py
  * added a web configuration interface with "classic" theme
    Added: templates/classic/*,
           wc/webgui/context/*.py,
  * added a templating mechanism
    Added: wc/webgui/*.py
  * new filter module ImageSize that filters images by size
    Added: wc/filter/ImageSize.py
  * - parse JS strings and comments
    - accept "<!- " as comment begin
    - allow colons in attribute names for namespaces
    Changed: wc/parser/htmlex.l
  * - handle empty status messages like 'HTTP/1.1 302 \r\n'
    - fix Message.get() usage by always providing default value
    - set statuscode for all http versions, even with missing response
      line
    Changed: wc/proxy/HttpServer.py
    Closes: SF bug #760434
  * added a new filter update mechanism that actually works