@@ -1,4 +1,4 @@
-Desc: script content in clear text due to <script src=""> tag with content
+Desc: nothing is clickable
 Url: http://www.mvhs.de/contentserv/www.mvhs.de/index.php
 
 Desc: forwards at web.de (only https, so leave for later)
