@@ -1,6 +1,5 @@
-<!-- To make this actually work, you need to change this link! -->
-<script src="http://localhost/~calvin/1.js">
-/* this should not be here */ 
+<script src="http://localhost/notfound.js">
+/* this should not be here **/ 
 </script>
 
 </html>
