@@ -15,7 +15,7 @@ def _main():
     else:
         f = file(sys.argv[1])
     p = HtmlPrinter()
-    p.debug(1)
+    #p.debug(1)
     data = f.read(1024)
     while data:
         p.feed(data)
